# valentine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VERSION  version.h.in
.github/: FUNDING.yml
.github/workflows/: cmake_ctest.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ValentineParameters.h
Source/GUI/Panels/: ValentineCenterPanel.cpp  ValentineCenterPanel.h  ValentineMainPanel.cpp  ValentineMainPanel.h
Tests/: PluginBasics.cpp
libs/Common/DSP/: AudioHelpers.h  CircularBuffer.h  Compressor.cpp  Compressor.h  DigiDegraders.cpp  DigiDegraders.h  EnvelopeDetector.cpp  EnvelopeDetector.h  LagrangeInterpolator.h  Saturation.cpp  Saturation.h  ThiranAllpass.h
libs/Common/GUI/Components/Panels/: PresetPanel.cpp  PresetPanel.h  VerticalMeterPanel.cpp  VerticalMeterPanel.h
libs/Common/GUI/Components/Widgets/: FlatTextButton.cpp  FlatTextButton.h  FlatTextChooser.cpp  FlatTextChooser.h  LabelSlider.cpp  LabelSlider.h  ParameterSlider.cpp  ParameterSlider.h  ParameterTextButton.cpp  ParameterTextButton.h
libs/Common/GUI/LookAndFeel/: LookAndFeel.cpp  LookAndFeel.h  LookAndFeelConstants.h  MeterLookAndFeelMethods.h
libs/Common/GUI/Managers/: RadioButtonGroupManager.cpp  RadioButtonGroupManager.h  ToteBagPresetManager.cpp  ToteBagPresetManager.h
libs/Common/GUI/Utilities/: GraphicsUtilities.cpp  GraphicsUtilities.h
libs/tote_bag/dsp/: AudioHelpers.h  CircularBuffer.h  Compressor.cpp  Compressor.h  DigiDegraders.cpp  DigiDegraders.h  EnvelopeDetector.cpp  LagrangeInterpolator.h  Saturation.cpp  Saturation.h  ThiranAllpass.h
libs/tote_bag/gui/components/panels/: PresetPanel.cpp  PresetPanel.h  VerticalMeterPanel.cpp  VerticalMeterPanel.h
libs/tote_bag/gui/components/widgets/: FlatTextButton.cpp  FlatTextChooser.h  LabelSlider.h  ParameterSlider.cpp
libs/tote_bag/gui/lookandfeel/: LookAndFeel.cpp  LookAndFeelConstants.h
libs/tote_bag/juce_gui/components/panels/: InfoPanel.cpp  InfoPanel.h  PresetPanel.cpp  PresetPanel.h  VerticalMeterPanel.cpp  VerticalMeterPanel.h
libs/tote_bag/juce_gui/components/widgets/: DrawableParameterButton.cpp  DrawableParameterButton.h  FlatTextButton.cpp  FlatTextChooser.cpp  FlatTextChooser.h  LabelSlider.cpp  LabelSlider.h  ParameterSlider.h  ParameterTextButton.cpp  tbl_ToggleButton.cpp  tbl_ToggleButton.h
libs/tote_bag/juce_gui/lookandfeel/: LookAndFeel.cpp  LookAndFeel.h  LookAndFeelConstants.h  MeterLookAndFeelMethods.h
libs/tote_bag/juce_gui/managers/: RadioButtonGroupManager.cpp  RadioButtonGroupManager.h  ToteBagPresetManager.cpp  ToteBagPresetManager.h
libs/tote_bag/juce_gui/utilities/: GraphicsUtilities.cpp  tbl_font.cpp  tbl_font.h
libs/tote_bag/utils/: macros.hpp  tbl_math.hpp  type_helpers.hpp
packaging/: dmg.json  installer.iss
resources/installer_mac/: Readme.rtf
scripts/: make-mac-installer.sh
scripts/installer_mac/: make_installer.sh
scripts/installer_win/: installer.iss
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ValentineParameters.h
src/gui/panels/: ValentineBottomRowPanel.cpp  ValentineBottomRowPanel.h  ValentineCenterPanel.cpp  ValentineCenterPanel.h  ValentineMainPanel.cpp  ValentineMainPanel.h  ValentineTopRowPanel.cpp  ValentineTopRowPanel.h
tests/: AudioHelpersTests.cpp  AudioHelpersTests.hpp  MathTests.cpp
